# BCFTools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ReadMe.md
src/: BcfHdf5Convertor.cpp  BcfHdf5Convertor.h  SFSNodeItem.cpp  SFSNodeItem.h  SFSReader.cpp  SFSReader.h  SFSUtils.hpp  StringUtilities.hpp  bcf2hdf5.cpp  unbcf.cpp
src/BrukerIntegration/: BrukerIntegrationConstants.h  BrukerIntegrationStructs.h
src/BrukerIntegrationFilters/: BrukerDataLoader.cpp  BrukerDataLoader.h  EbsdPatterns.cpp  EbsdPatterns.h
src/EbsdLib/Core/: EbsdDataArray.cpp  EbsdDataArray.hpp  EbsdLibConstants.h  EbsdMacros.h
